<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/titleFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home_main_menu" />

    <item
        android:id="@+id/catalogFragment"
        android:icon="@drawable/ic_catalog"
        android:title="@string/title_catalog_main_menu" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_bag"
        android:title="@string/title_cart_main_menu" />

    <item
        android:id="@+id/promoFragment"
        android:icon="@drawable/ic_discount"
        android:title="@string/title_promo_main_menu" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile_main_menu" />
</menu>