<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layoutMatchStyle"
    android:background="@color/bg_white">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_catalog_frg"
        style="@style/titleFragment"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/title_frg_catalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_sort_frg_catalog"
        style="@style/btn_sort_frg_catalog"
        android:text="@string/btn_sort_frg_catalog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_catalog_frg" />

    <androidx.appcompat.widget.AppCompatImageView
        style="@style/layoutWrapStyle"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/btn_sort_frg_catalog"
        app:layout_constraintStart_toEndOf="@id/btn_sort_frg_catalog"
        app:layout_constraintTop_toTopOf="@id/btn_sort_frg_catalog" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/btn_filter_frg_catalog"
        android:text="@string/btn_filter_frg_catalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_catalog_frg" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_carousel_frg_catalog"
        style="@style/recycler_view_carousel_frg_catalog"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sort_frg_catalog"
        tools:itemCount="5"
        tools:listitem="@layout/rv_carousel_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_products_frg_catalog"
        style="@style/recycler_view_products_frg_catalog"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_carousel_frg_catalog"
        app:spanCount="2"
        tools:itemCount="8"
        tools:listitem="@layout/rv_item" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_sorting_frg_catalog"
        style="@style/layout_sorting_frg_catalog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sort_frg_catalog">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_sort_popular_frg_catalog"
            style="@style/btn_layout_sorting_frg_catalog"
            android:layout_marginTop="12dp"
            android:text="@string/btn_popular_frg_catalog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_catalog_frg" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_price_down_frg_catalog"
            style="@style/btn_layout_sorting_frg_catalog"
            android:layout_marginTop="8dp"
            android:text="@string/btn_price_down_frg_catalog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_catalog_frg" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_price_up_frg_catalog"
            style="@style/btn_layout_sorting_frg_catalog"
            android:layout_marginTop="8dp"
            android:text="@string/btn_up_frg_catalog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_catalog_frg" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progress_catalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_refresh_frg_catalog"
        style="@style/btn_enter_frg_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_pink"
        android:enabled="true"
        android:minHeight="52dp"
        android:paddingHorizontal="12dp"
        android:text="@string/btn_load_data_frg_catalog"
        android:textAllCaps="false"
        android:textColor="@color/txt_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>